Include JPEG.NT JPEG.Tests JPEG.Benchmarks

--- a/.gitignore
+++ b/.gitignore
@@ -356,7 +356,11 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
-!./debug/
-
 # Ignore .idea files
 .idea/
+
+!./debug/
+
+# Big test file
+JPEG.Tests/Images/earth.bmp
+
